-- 1.2 (2019-xx-xx)
Move to CMake for building project instead of autotools
Drop Vagranfile in favor of only supporting the Dockerfile
Add support for using jemalloc (http://jemalloc.net/)

-- 1.1 (2018-10-29)
Move to spdlog (https://github.com/gabime/spdlog)to handle logging instead of cout
    spdlog is vendored under src/, currently using v0.13.0
Add logging directive to config to configure how Ocelot logs and where it logs
Add deamon (--daemon, -d) to run Ocelot as a daemon
Move source code into src/ directory
Add Vagrantfile and Dockerfile for running Ocelot

-- 1.0 (2015-01-26)
NOTE: This version requires the following database change:
ALTER TABLE xbt_files_users DROP PRIMARY KEY, ADD PRIMARY KEY (peer_id,fid,uid)

Add a 'deleted' flag to user object to stop including removed users in returned peer lists
Add a prefix to the peer list keys for randomization and smaller chance of peer id collisions
Add HTTP Keep-Alive support and show request rate in the tracker stats
Add readonly mode for easier testing
Catch exceptions in the mysql::load_* functions
Configurable max/default numwant parameter
Don't disable binlogs in the peer flush sessions
Don't start a reaper thread if it's already running
Inline peer_is_visible and user functions
Mark nonchanging parameter as const
Mark users with IP = 127.0.0.1 as protected
Read settings from a config file instead of a compiled object
Reload torrent list, user list and client whitelist on SIGUSR1
Use atomic variables for stats
Use consistent integer widths where it matters
Use std::lock_guard instead of std::unique_lock for mutex

-- 0.8 (2014-03-27)
Add setting for maximum request size
Get client IP from the x-forwarded-for header if it is provided
Read/write full requests even if they are split into several recv/send calls

-- 0.7 (2013-12-05)
Add bintohex function to use when printing binary data to stdout
Check if compiler supports -std=c++11
Collect some stats and add a method that prints them